fixing-header-z-index
При прокрутке страницы шапка сайта иногда уходила
за другие блоки, исправил это свойством z-index: 100.
Так же выставил полупрозрачный цвет для шапки,
показалось более интересным

--- a/Visma/css/general.css
+++ b/Visma/css/general.css
@@ -96,8 +96,9 @@ body {
 
 .header {
   position: fixed;
+  z-index: 100;
   height: 110px;
-  background: rgb(255, 255, 255);
+  background: rgba(255, 255, 255, 0.904);
 }
 .header_tools {
   width: 29.8611111111%;
